# olap2025.2

./: .gitattributes  .gitignore  Makefile  README.md  compose.yaml  docker-compose.yml  etl_draft.py  etl_orig.ipynb  main.py  pyproject.toml
config/: local_postgres_config.json  local_pqt_config.json  postgres.conf
etl/: config.py  main.py  polars_based_draft.py
etl/CinzasDoBrazil/: .gitignore  build.sbt
etl/extract/: __init__.py
etl/load/: __init__.py  loader.py
etl/migrations/: 001_init_schema.sql  001_init_schema_columnar.sql
etl/transform/: transformer.py
provision/: README.md  SUPERSET_DEPLOY.md  providers.tf  vars.tf
provision/dataproc/: .terraform.lock.hcl  README.md  dataproc.tf  db.tf  dns.tf  network.tf  outputs.tf  providers.tf  scheduler.tf  services.tf  terraform.tfstate  terraform.tfvars  vars.tf  workflows.tf
provision/db/: .terraform.lock.hcl  db.tf  dns.tf  terraform.tfstate  terraform.tfvars  vars.tf
provision/infra/: .terraform.lock.hcl  db.tf  dns.tf  (+8 more)
queries/: cube_risco_fogo.sql  drew_across_horario.sql  drill_acrros_umidade_potencia.sql  drill_down_focos.sql  pivot.sql  rollup_precipitacao_clima.sql  slice.sql  slice_multidimensional.sql
report/: .marprc  render.sh
slides_final/: final_presentation.md  settings.json
tests/: README.md  __init__.py  check_data_quality.sql  conftest.py  test_integration_queimada_clima.py  test_schema_dim_data.py  test_schema_dim_horarios.py  test_schema_dim_horarios_clima.py  test_schema_dim_local.py  test_schema_dim_local_clima.py  test_schema_fct_clima.py  test_schema_fct_queimadas.py
(+80 files in other folders)
