[project]
name = "Wildfire"
version = "0.1.0"
description = "Project for Online Analytical processing of Brazilian wildfire data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "pip>=25.3",
    "polars>=1.35.2",
    "pyspark>=4.0.1",
    "pytest>=9.0.1",
]
