[project]
name = "Wildfire"
version = "0.1.0"
description = "Project for Online Analytical processing of Brazilian wildfire data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "pip>=25.3",
    "pyspark>=4.0.1",
    "delta-spark>=3.2.0",
    "polars>=1.35.2",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=9.0.1",
]
